Fixed: - First paragraph is missing (types) - Write more info about minature black holes - Fix the up arrow position on smaller screen widths - And more

--- a/css/main.scss
+++ b/css/main.scss
@@ -131,7 +131,20 @@ a.up svg {
     fill: white;
     cursor: default;
     opacity: 0;
-    transition: opacity 350ms ease;
+    transition: all 350ms ease;
+
+    @media (max-width: 720px) {
+        width: 30px;
+        height: 30px;
+        right: 20px;
+        bottom: 30px;
+    }
+    @media (max-width: 620px) {
+        right: 15px;
+    }
+    @media (max-width: 420px) {
+        display: none;
+    }
 }
 a.up.show svg {
     cursor: pointer;
